# django-monitor-pypi

./: .gitignore  MANIFEST.in  README.MD  README.rst  setup.cfg
django_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monitor/: README.md  exceptions.py  filters.py  mocks.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
monitor/core/: base_model.py  base_test.py  base_viewset.py  decorators.py  errors.py  mixins.py  paginations.py
monitor/management/commands/: monitor.py
monitor/migrations/: 0001_initial.py
