[metadata]
name = django-monitor
version = 0.1
description = A Django app to conduct Web-based monitor.
long_description = file: README.rst
author = Samurai
author_email = yourname@example.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2 
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django == 3.2.16
    djangorestframework==3.14.0
    django-filter==22.1
    celery==5.2.7
    djongo==1.3.6
    pymongo==3.13.0
    django-redis==5.2.0

    